--- a/src/styles.css
+++ b/src/styles.css
@@ -126,7 +126,7 @@ body {
 }
 
 /* Sub Header */
-/* contact us */
+/*contact form */
 .contact-form {
   display: flex;
   flex-direction: column;
@@ -227,9 +227,11 @@ textarea {
 }
 
 .slide img {
-  width: 80%;
+  width: 60%;
   height: 100%;
   object-fit: cover;
+  border-radius: 4px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 /* First section: Cards Section */
@@ -241,7 +243,7 @@ textarea {
 }
 
 .card {
-  width: 30%;
+  width: 40%;
   margin-bottom: 2rem;
   background-color: #fff;
   border: 1px solid #ccc;
@@ -337,7 +339,7 @@ textarea {
 }
 
 .thumbnail-gallery img {
-  width: 200px;
+  width: 300px;
   height: auto;
   margin: 10px;
   border-radius: 5px;
