--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
 
 body {
   background-color: #005fa3;
+  padding: 0;
+  margin: 0;
 }
 
 .header {
@@ -169,9 +171,10 @@ textarea {
   resize: none;
 }
 
-.submit-button{
+.submit-button {
   text-align: center;
 }
+
 .contact-form button[type="submit"] {
   background-color: #4CAF50;
   color: #fff;
@@ -204,9 +207,8 @@ textarea {
 .rotator-slider {
   position: relative;
   width: 100%;
-  height: 400px;
+  height: 800px;
   overflow: hidden;
-  margin: 30px;
 }
 
 .slide {
@@ -227,7 +229,7 @@ textarea {
 }
 
 .slide img {
-  width: 60%;
+  width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 4px;
@@ -236,15 +238,20 @@ textarea {
 
 /* First section: Cards Section */
 .cards-section {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  column-gap: 50px;
   align-items: center;
   flex-wrap: wrap;
+  padding: 0 20px;
+  margin: 0 50px;
 }
 
 .card {
-  width: 40%;
-  margin-bottom: 2rem;
+  display: grid;
+  grid-template-rows: 80% 10% 10%;
+  width: 100%;
+  height: 100%;
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -258,8 +265,8 @@ textarea {
 }
 
 .card img {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 100%;
   border-radius: 4px;
 }
 
