--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
 
+html,
 body {
   background-color: #005fa3;
   padding: 0;
@@ -89,7 +90,6 @@ body {
   display: flex;
   align-items: center;
   text-align: center;
-  margin-right: 30px;
 }
 
 .search .searchinput {
@@ -128,12 +128,22 @@ body {
 }
 
 /* Sub Header */
+.sub-header {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 700px;
+  margin-bottom: 80px;
+}
+
 /*contact form */
 .contact-form {
+  position: absolute;
+  z-index: 9;
   display: flex;
   flex-direction: column;
-  max-width: 500px;
-  margin: 30px auto;
+  width: 500px;
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 5px;
@@ -207,7 +217,7 @@ textarea {
 .rotator-slider {
   position: relative;
   width: 100%;
-  height: 800px;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -232,24 +242,25 @@ textarea {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 4px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+/*content*/
+.main-content {
+  padding: 0 100px;
+  box-sizing: border-box;
 }
 
 /* First section: Cards Section */
 .cards-section {
   display: grid;
   grid-template-columns: repeat(3, auto);
-  column-gap: 50px;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 0 20px;
-  margin: 0 50px;
+  column-gap: 20px;
 }
 
 .card {
+  box-sizing: border-box;
   display: grid;
-  grid-template-rows: 80% 10% 10%;
+  grid-template-rows: 70% 10% 20%;
   width: 100%;
   height: 100%;
   background-color: #fff;
@@ -282,6 +293,7 @@ textarea {
   margin: 0;
   font-size: 1rem;
   color: #666;
+  padding-top: 12px;
 }
 
 /* Second section:image text section*/
@@ -290,13 +302,12 @@ textarea {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 4rem 2rem;
+  padding: 4rem 0;
 }
 
 .image-text-section img {
   max-width: 50%;
   height: auto;
-  margin-right: 2rem;
 }
 
 .image-text-section .text {
@@ -332,23 +343,20 @@ textarea {
 
 /*Third section: Thumbnail Gallery */
 .thumbnail-gallery {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   margin-bottom: 40px;
+  width: 100%;
 }
 
-.thumbnail-gallery .gallery-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+.gallery-row {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+  grid-template-columns: repeat(4, auto);
+  gap: 20px;
 }
 
 .thumbnail-gallery img {
-  width: 300px;
-  height: auto;
-  margin: 10px;
+  width: 100%;
   border-radius: 5px;
   transition: transform 0.3s ease-in-out;
 }
@@ -413,7 +421,6 @@ textarea {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  display: block;
   width: 100%;
 }
 
@@ -513,7 +520,6 @@ footer {
 
 .col:last-child {
   text-align: right;
-  margin-right: 30px;
 }
 
 .col:last-child img {
