--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
 
-html,
+html{
+  font-size: 16px; 
+}
 body {
   background-color: #005fa3;
   padding: 0;
   margin: 0;
+  font-size: 1rem;
 }
 
 .header {
@@ -14,12 +17,12 @@ body {
   display: grid;
   grid-template-columns: 20% auto 5%;
   align-items: center;
-  max-height: 96px;
+  max-height: 6rem; 
 }
 
 .header img {
-  height: 60px;
-  padding: 8px;
+  height: 3.75rem;
+  padding: 0.5rem;
 }
 
 /*Menu*/
@@ -82,6 +85,7 @@ body {
 .menu ul ul li a:hover {
   background-color: #f9f9f9;
 }
+
 
 /*Search Bar*/
 .search {
