--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
 
-html{
-  font-size: 16px; 
+html {
+  font-size: 16px;
+  width: 100%;
 }
+
 body {
   background-color: #005fa3;
   padding: 0;
   margin: 0;
   font-size: 1rem;
+  width: 100%;
 }
 
 .header {
@@ -17,7 +20,8 @@ body {
   display: grid;
   grid-template-columns: 20% auto 5%;
   align-items: center;
-  max-height: 6rem; 
+  max-height: 6rem;
+  width: 100%;
 }
 
 .header img {
@@ -147,7 +151,7 @@ body {
   z-index: 9;
   display: flex;
   flex-direction: column;
-  width: 500px;
+  width: 30%;
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 5px;
@@ -302,20 +306,20 @@ textarea {
 
 /* Second section:image text section*/
 .image-text-section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  column-gap: 50px;
   align-items: center;
   padding: 4rem 0;
+  width: 100%;
 }
 
 .image-text-section img {
-  max-width: 50%;
-  height: auto;
+  width: 100%;
 }
 
 .image-text-section .text {
-  max-width: 45%;
+  width: 100%;
 }
 
 .image-text-section h2 {
@@ -536,4 +540,48 @@ footer {
   margin-top: 10px;
   font-size: 20px;
   color: #555;
+}
+
+@media screen and (max-width: 480px) {
+
+  html,
+  body {
+    overflow-x: hidden;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  .contact-form {
+    width: 70%;
+  }
+
+  .main-content {
+    padding: 0 16px;
+  }
+
+  .cards-section {
+    grid-template-rows: repeat(3, auto);
+    grid-template-columns: auto;
+    row-gap: 20px;
+  }
+
+  .image-text-section {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(2, auto);
+  }
+
+  .gallery-row {
+    grid-template-rows: repeat(4, auto);
+    grid-template-columns: repeat(2, auto);
+    gap: 20px;
+  }
+
+  .lightbox-modal img {
+    object-fit: scale-down;
+    justify-content: center;
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
