--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,17 @@ body {
   padding: 0.5rem;
 }
 
+.menu-toggle {
+  display: none;
+}
+
 /*Menu*/
+.menu-container {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
 .menu {
   color: #fff;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
@@ -63,6 +73,7 @@ body {
 .menu ul li:hover ul {
   display: block;
   background: #333;
+  z-index: 999;
 }
 
 .menu ul ul {
@@ -70,7 +81,6 @@ body {
   position: absolute;
   top: 100%;
   left: 0;
-  /* background-color: #fff; */
   border: 1px solid #ccc;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 }
@@ -550,11 +560,55 @@ footer {
   }
 
   .header {
-    grid-template-columns: auto 15%;
+    grid-template-columns: 20% auto 15%;
+    position: relative;
+  }
+
+  .menu-toggle {
+    display: block;
+    height: 50%;
   }
 
   .menu {
     display: none;
+    position: absolute;
+    top: 100%;
+    z-index: 999;
+    background-color: #005fa3;
+  }
+
+  .menu.active {
+    display: block;
+  }
+
+  .menu ul {
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+  }
+
+  .menu ul li:hover ul {
+    display: block;
+    background: #333;
+    position: absolute;
+    left: 100%;
+    top: 0;
+  }
+
+  .menu ul li a {
+    padding: 10px;
+  }
+
+  .menu ul ul li {
+    width: auto;
+    padding: 0;
+  }
+
+  .menu ul ul li a {
+    color: #ffffff;
+    font-weight: normal;
+    padding: 10px;
+    white-space: nowrap;
   }
 
   .search.active .searchinput {
