--- a/src/style.css
+++ b/src/style.css
@@ -129,7 +129,7 @@ body {
 
 .btn {
   background-color: #103953;
-  color:#ffffff;
+  color: #ffffff;
   border: 0;
   cursor: pointer;
   font-size: 1.5rem;
@@ -329,31 +329,37 @@ textarea {
 /* Second section:image text section*/
 .image-text-section {
   display: grid;
-  grid-template-columns: repeat(2, auto);
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(3, auto);
   column-gap: 50px;
   align-items: center;
   padding: 4rem 0;
   width: 100%;
+  grid-template-areas:
+    "a b"
+    "a c"
+    "a d";
 }
 
 .image-text-section img {
   width: 100%;
-}
-
-.image-text-section .text {
-  width: 100%;
+  grid-area: a;
 }
 
 .image-text-section h2 {
   font-size: 2.25rem;
   font-weight: bold;
-  margin-bottom: 1rem;
+  grid-area: b;
+  align-self: start;
+  margin: 0;
 }
 
 .image-text-section p {
   font-size: 1.25rem;
   line-height: 1.5;
-  margin-bottom: 2rem;
+  grid-area: c;
+  align-self: start;
+  margin: 0;
 }
 
 .cta-button {
@@ -365,6 +371,9 @@ textarea {
   color: #ffffff;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
+  grid-area: d;
+  width: 300px;
+  align-self: end;
 }
 
 .cta-button:hover {
@@ -519,7 +528,7 @@ textarea {
   height: auto;
 }
 
-.video-wrapper{
+.video-wrapper {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -591,10 +600,10 @@ footer {
 }
 
 
-@keyframes scale{
-  to{
-      transform: translate(-50%, -50%) scale(3);
-      opacity: 0;
+@keyframes scale {
+  to {
+    transform: translate(-50%, -50%) scale(3);
+    opacity: 0;
   }
 }
 
@@ -613,7 +622,7 @@ footer {
   .menu-toggle {
     display: block;
     background-color: #103953;
-    color:#fff;
+    color: #fff;
     height: 50%;
   }
 
@@ -688,9 +697,20 @@ footer {
 
   .image-text-section {
     grid-template-columns: auto;
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: repeat(4, auto);
+    row-gap: 20px;
+    ;
     margin-top: 30px;
     padding: 0;
+    grid-template-areas:
+      "b"
+      "a"
+      "c"
+      "d";
+  }
+
+  .cta-button {
+    justify-self: center;
   }
 
   .gallery-row {
@@ -705,19 +725,21 @@ footer {
     max-width: 100%;
     max-height: 100%;
   }
-.footer-cols {
-  display: grid;
-  grid-template-columns: auto;
-}
 
- 
+  .footer-cols {
+    display: grid;
+    grid-template-columns: auto;
+  }
+
+
   .col:last-child {
     margin: 0;
     display: block;
     margin: auto;
     padding: 30px;
   }
-  .col:last-child img{
+
+  .col:last-child img {
     height: 60px;
     width: auto;
   }
