--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  background-color: #e8e9e9;
+  background-color: #dde9eb;
   padding: 0;
   margin: 0;
   font-family: Cambria, serif;
@@ -471,7 +471,7 @@ textarea {
 }
 
 .toggle {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   color: #ffffff;
   margin: 1px 0;
   cursor: pointer;
