--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ body {
   font-size: 1rem;
   width: 100%;
 }
+
 /* header */
 .header {
   font-size: 3rem;
@@ -791,5 +792,13 @@ footer {
   .col:last-child img {
     height: 60px;
     width: auto;
+  }
+}
+
+
+
+@media (max-width: 768px) {
+  .video-wrapper iframe {
+    width: 100%;
   }
 }
