--- a/src/style.css
+++ b/src/style.css
@@ -1,24 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
 
+:root {
+  /* background colors */
+  --primary-bg-color: #ffffff;
+  --alt-bg-color: #e8e9e9;
+  --highlight-color: #303030;
+  --primary-color: #215170;
+  --secondary-bg-color: #dde9eb;
+  /* Color Scale */
+  --color-1: #7098b2;
+  --color-2: #406e8c;
+  --color-3: #215170;
+  --color-4: #103953;
+
+  /* text styles */
+  /* Heading styles */
+  --heading-font: "Cambria Bold", Cambria, sans-serif;
+
+  --heading-1-color: #ffffff;
+  --heading-1-size: 48px;
+
+  --heading-2-color: #303030;
+  --heading-2-size: 36px;
+
+  --heading-3-color: #215170;
+  --heading-3-size: 30px;
+
+  --heading-4-color: #215170;
+  --heading-4-size: 24px;
+
+  --heading-5-color: #215170;
+  --heading-5-size: 22px;
+
+  /* Paragraph style */
+  --paragraph-font: "Arial", sans-serif;
+
+  --paragraph-color: #303030;
+  --paragraph-size: 20px;
+
+  /* Hyperlink styles */
+  --link-color: #215170;
+  --link-size: 20px;
+  --link-underline: underline;
+
+  --link-hover-color: #ffffff;
+  --link-hover-font: "Arial Bold", Arial, sans-serif;
+}
+
 html {
-  font-size: 16px;
   width: 100%;
 }
 
 body {
-  background-color: #dde9eb;
+  background-color: var(--primary-bg-color);
   padding: 0;
   margin: 0;
-  font-family: Cambria, serif;
+  font-family: var(--paragraph-font);
   font-size: 1rem;
   width: 100%;
 }
 
+h1,
+h2,
+h3,
+h4 {
+  font-family: var(--heading-font);
+}
+
+
 /* header */
 .header {
-  font-size: 3rem;
-  font-weight: bold;
-  background-color: #103953;
+  font-size: var(--heading-1-size);
+  background-color: var(--color-4);
   display: grid;
   grid-template-columns: 20% auto 5%;
   align-items: center;
@@ -32,9 +85,9 @@ body {
   left: -9999px;
   z-index: 999;
   padding: 1em;
-  font-size: 1.25rem;
-  background-color: #ffffff;
-  color: #303030;
+  font-size: var(--link-size);
+  background-color: var(--color-3);
+  color: var(--link-hover-color);
   opacity: 0;
 }
 
@@ -68,13 +121,14 @@ body {
 }
 
 .menu {
-  color: #ffffff;
+  color: var(--heading-1-color);
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+  font-family: var(--link-font);
 }
 
 .menu ul {
   list-style: none;
-  font-size: 1.25rem;
+  font-size: var(--link-size);
   margin: 0;
   padding: 0;
 }
@@ -86,20 +140,20 @@ body {
 
 .menu ul li a {
   display: block;
-  color: #ffffff;
+  color: var(--link-hover-color);
   font-weight: bold;
   padding: 15px 20px;
   text-decoration: none;
 }
 
 .menu ul li:hover>a {
-  color: #ffffff;
-  text-decoration: underline;
+  color: var(--link-hover-color);
+  text-decoration: var(--link-underline);
 }
 
 .menu ul li:hover ul {
   display: block;
-  background: #215170;
+  background-color: var(--color-3);
   z-index: 999;
 }
 
@@ -117,13 +171,13 @@ body {
 }
 
 .menu ul ul li a {
-  color: #ffffff;
+  color: var(--link-hover-color);
   font-weight: normal;
   padding: 10px 20px;
 }
 
 .menu ul ul li a:hover {
-  background-color: #406e8c;
+  background-color: var(--color-2);
 }
 
 
@@ -137,9 +191,9 @@ body {
 }
 
 .search .searchinput {
-  background-color: #ffffff;
+  background-color: var(--alt-bg-color);
   border: 0;
-  font-size: 1.25rem;
+  font-size: var(--paragraph-size);
   padding: 10px;
   height: 20px;
   width: 20px;
@@ -149,8 +203,8 @@ body {
 }
 
 .btn {
-  background-color: #103953;
-  color: #ffffff;
+  background-color: var(--color-4);
+  color: var(--color-1);
   border: 0;
   cursor: pointer;
   font-size: 1.5rem;
@@ -190,13 +244,12 @@ body {
   flex-direction: column;
   width: 30%;
   padding: 20px;
-  font-size: 1.25rem;
-  background-color: #e8e9e9;
+  font-size: var(--paragraph-size);
+  background-color: var(--secondary-bg-color);
   border-radius: 5px;
 }
 
-.contact-form h2 {
-  font-size: 1.5rem;
+.contact-form h3 {
   margin: 20px auto;
 }
 
@@ -232,8 +285,8 @@ textarea {
 }
 
 .contact-form button[type="submit"] {
-  background-color: #406e8c;
-  color: #ffffff;
+  background-color: var(--color-2);
+  color: var(--link-hover-color);
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
@@ -241,21 +294,20 @@ textarea {
 }
 
 .contact-form button[type="submit"]:hover {
-  background-color: #103953;
+  background-color: var(--color-4);
 }
 
 .message {
   max-width: 500px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #ffffff;
+  background-color: var(--secondary-bg-color);
   border-radius: 5px;
   margin-top: 20px;
   display: none;
 }
 
 .message p {
-  font-size: 1.25rem;
   margin-bottom: 10px;
 }
 
@@ -308,13 +360,13 @@ textarea {
   display: grid;
   grid-template-rows: 7ft 1ft 2ft;
   width: 100%;
-  /* height: 100%; */
-  background-color: #ffffff;
+  background-color: var(--secondary-bg-color);
   border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   padding: 1rem;
   transition: transform 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .card:hover {
@@ -332,19 +384,18 @@ textarea {
 }
 
 .card h3 {
-  color: #215170;
+  color: var(--heading-3-color);
   margin: 0;
-  font-size: 1.5rem;
-  font-weight: bold;
+  font-size: var(--heading-3-size);
   margin-top: 1rem;
   margin-bottom: 0.5rem;
 }
 
 .card p {
   margin: 0;
-  font-size: 1.25rem;
-  color: #303030;
-  padding-top: 12px;
+  font-size: var(--paragraph-size);
+  color: var(--paragraph-color);
+  padding: 12px 0;
 }
 
 /* Second section:image text section*/
@@ -368,15 +419,14 @@ textarea {
 }
 
 .image-text-section h2 {
-  font-size: 2.25rem;
-  font-weight: bold;
+  font-size: var(--heading-2-size);
   grid-area: b;
   align-self: start;
   margin: 0;
 }
 
 .image-text-section p {
-  font-size: 1.5rem;
+  font-size: var(--paragraph-size);
   line-height: 1.5;
   padding-right: 40px;
   grid-area: c;
@@ -389,17 +439,17 @@ textarea {
   font-size: 1.25rem;
   border-radius: 4px;
   border: none;
-  background-color: #406e8c;
-  color: #ffffff;
+  background-color: var(--color-2);
+  color: var(--link-hover-color);
   cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.2s ease-in-out;
   grid-area: d;
   width: 300px;
   align-self: end;
 }
 
 .cta-button:hover {
-  background-color: #103953;
+  background-color: var(--color-4);
 }
 
 
@@ -411,8 +461,7 @@ textarea {
 }
 
 .thumbnail-gallery h2 {
-  font-size: 2.25rem;
-  font-weight: bold;
+  font-size: var(--heading-2-size);
 }
 
 .gallery-row {
@@ -463,7 +512,7 @@ textarea {
 
 .lightbox-controls button {
   opacity: 0.2;
-  background-color: #ffffff;
+  background-color: var(--primary-bg-color);
   border: none;
   font-size: 3rem;
   cursor: pointer;
@@ -475,14 +524,13 @@ textarea {
   right: 25px;
   font-size: 50px;
   font-weight: bold;
-  color: #ffffff;
+  color: var(--primary-bg-color);
   cursor: pointer;
 }
 
 /* Content Block */
 .content-block h2 {
-  font-size: 2.25rem;
-  font-weight: bold;
+  font-size: var(--heading-2-size);
 }
 
 .content {
@@ -493,11 +541,11 @@ textarea {
 }
 
 .toggle {
-  font-size: 1.25rem;
-  color: #ffffff;
+  font-size: var(--heading-4-size);
+  color: var(--heading-4-color);
   margin: 1px 0;
   cursor: pointer;
-  background-color: #215170;
+  background-color: var(--secondary-bg-color);
   padding: 10px 10px 10px 30px;
   position: relative;
 
@@ -511,15 +559,16 @@ textarea {
 
 .toggle.active::before {
   content: "-";
+  position: absolute;
+  left: 10px;
 }
 
 .toggle-content {
   display: none;
-  background-color: #e8e9e9;
-  font-size: 1.25rem;
+  background-color: var(--alt-bg-color);
+  font-size: var(--paragraph-size);
   line-height: 1.5;
   padding: 0 60px;
-  margin-bottom: 20px;
   height: 0;
   overflow: hidden;
   transition: height 0.3s ease;
@@ -540,7 +589,7 @@ textarea {
 }
 
 .toggle-content a {
-  color: #215170;
+  color: var(--link-color);
   cursor: pointer;
 
 }
@@ -561,8 +610,7 @@ textarea {
 }
 
 .video-container h2 {
-  font-size: 2.25rem;
-  font-weight: bold;
+  font-size: var(--heading-2-size);
 }
 
 /* back-to-top */
@@ -576,25 +624,25 @@ textarea {
   font-weight: bold;
   border: none;
   outline: none;
-  background-color: #303030;
+  background-color: var(--color-1);
   color: #ffffff;
   opacity: 0.7;
   cursor: pointer;
   padding: 5px;
   border-radius: 5px;
   width: 40px;
-  height: 60px;
+  height: 40px;
   text-align: center;
   line-height: 1.2;
 }
 
 #back-to-top:hover {
-  background-color: #666;
+  background-color: var(--color-3);
 }
 
 /* Footer */
 footer {
-  background-color: #103953;
+  background-color: var(--color-4);
   padding: 20px 0;
   text-align: center;
 }
@@ -610,9 +658,9 @@ footer {
   padding: 0 20px;
 }
 
-.col h4 {
-  font-size: 1.25rem;
-  color: #ffffff;
+.col h5 {
+  font-size: var(--heading-5-size);
+  color: var(--link-hover-color);
   margin-bottom: 10px;
 }
 
@@ -624,11 +672,11 @@ footer {
 
 .col ul li {
   margin-bottom: 5px;
-  font-size: 1rem;
+  font-size: var(--link-size);
 }
 
 .col ul li a {
-  color: #ffffff;
+  color: var(--link-hover-color);
   text-decoration: none;
 }
 
@@ -645,8 +693,6 @@ footer {
 
 .footer-tagline {
   margin-top: 10px;
-  font-size: 1.25rem;
-  color: #ffffff;
 }
 
 
@@ -671,8 +717,8 @@ footer {
 
   .menu-toggle {
     display: block;
-    background-color: #103953;
-    color: #fff;
+    background-color: var(--color-4);
+    color: var(--link-hover-color);
     height: 50%;
   }
 
@@ -681,7 +727,7 @@ footer {
     position: absolute;
     top: 100%;
     z-index: 999;
-    background-color: #215170;
+    background-color: var(--color-3);
   }
 
   .menu.active {
@@ -696,7 +742,7 @@ footer {
 
   .menu ul li:hover ul {
     display: block;
-    background: #406e8c;
+    background-color: var(--color-2);
     position: absolute;
     left: 100%;
     top: 0;
@@ -712,7 +758,7 @@ footer {
   }
 
   .menu ul ul li a {
-    color: #ffffff;
+    color: var(--link-hover-color);
     font-weight: normal;
     padding: 10px;
     white-space: nowrap;
@@ -725,6 +771,7 @@ footer {
 
   .contact-form {
     width: 70%;
+    font-size: 1rem;
   }
 
   .sub-header {
